# apps/admin/src/api/index.ts
@@ -20,6 +20,7 @@ export {
   adminTaxonomyControllerList,
   adminTaxonomyControllerRemove,
   adminTaxonomyControllerRename,
+  adminTaxonomyControllerReorder,
   adminTelegramControllerAccount,
   adminTelegramControllerListChats,
   adminTelegramControllerLogOut,
@@ -126,6 +127,11 @@ export type {
   AdminTaxonomyControllerRenameErrors,
   AdminTaxonomyControllerRenameResponse,
   AdminTaxonomyControllerRenameResponses,
+  AdminTaxonomyControllerReorderData,
+  AdminTaxonomyControllerReorderError,
+  AdminTaxonomyControllerReorderErrors,
+  AdminTaxonomyControllerReorderResponse,
+  AdminTaxonomyControllerReorderResponses,
   AdminTelegramControllerAccountData,
   AdminTelegramControllerAccountError,
   AdminTelegramControllerAccountErrors,
@@ -190,6 +196,7 @@ export type {
   SyncJobResponseDto,
   TaxonomyItemResponseDto,
   TaxonomyNameDto,
+  TaxonomyOrderDto,
   TaxonomyReferenceResponseDto,
   TelegramAccountProfileResponseDto,
   TelegramAccountResponseDto,
